style.css
/*fonts*/
@import url('https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Dongle&family=Gamja+Flower&family=Gothic+A1&family=Hahmlet:wght@100..900&family=Hi+Melody&family=Jua&family=Noto+Serif+KR:wght@200..900&family=Orbit&family=Poor+Story&display=swap');


/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}

.sun-editor-editable{
    background-color: transparent !important;
    width: 100% !important;
    height: 100% !important;
    box-sizing: border-box !important;
}

/*custom css*/
body{
    width: 100vw;
    height: 100vh;
    font-family: 'Galmuri9', sans-serif;
    background-image: url('images/check_dot.png');
    background-size: contain; /* 또는 cover, 100% auto 등 */
    background-position: center;
    overflow-x: hidden;
}
.wrap{
    width: calc(100vw - 40px);
    height: auto;
    margin: auto;
    padding-bottom: 80px;
    display: none;
}
.wrap.show{
    display: block;
}
h1{
    color: #8b008b;
    font-size: 24px;
    font-family: "Bitcount Prop Single Ink", system-ui;
    font-weight: 700;
    line-height: 32px;
    padding: 10px 0;
    text-align: center;
    background-image: url('images/heart_dot.png');
    width: 100vw;
    transform: translatex(-20px);
    background-size: contain; /* 또는 cover, 100% auto 등 */
    background-position: center;
}
.main-content-container{
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    gap: 20px;
}
.content-container{
    background-color: #ffebcd;
    border: 1px solid #ff69b4;
    box-sizing: border-box;
    padding: 16px;
    width: 100%;
}
.title-box{
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 12px;
}
button{
    background: transparent;
    border: none;
    padding: 0;
    margin: 0;
    cursor: pointer;
}
.title-box button{
    width: 20px;
    height: 20px;
    align-self: center;
}
.title-box button svg{
    width: 20px;
    height: 20px;
    color: #ff69b4;
    fill: #ff69b4;
}
p{
    color: #8b008b;
    font-size: 16px;
    font-weight: 700;
    align-self: center;
}
.img-upload-label{
    display: flex;
    flex-direction: column;
    gap: 12px;
    width: 100%;
    height: auto;
    cursor: pointer;
    font-size: 14px;
}
.img-upload-label svg{
    color: #ff69b4;
    fill: #ff69b4;
    width: 30px;
    height: 27px;
    margin: auto;
}
.img-upload-label p{
    font-size: 12px;
}
.btn-step{
    font-family: 'Galmuri9', sans-serif;
    width: 100%;
    height: 52px;
    padding: 0px 8px;
    border: 0;
    box-sizing: border-box;
    border-radius: 9999px;
    background-color: #ff69b4;
    color: #ffffff;
    font-size: 16px;
    font-weight: 700;
    line-height: 28px;
    outline: none;
}
.main-content-container.step-2 .content-container{
    background-color: transparent;
    border: none;
    padding: 0;
}
.content-container .result{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}
.result-letter{
    width: 200px;
    height: 300px;
    position: relative;
}
.letter-text-area{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
.letter-background{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
}
.btn-letter{
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 28px;
    height: 44px;
    border: 0;
    box-sizing: border-box;
    border-radius: 9999px;
    color: #ffffff;
    background-color: #ff69b4;
    outline: none;
    align-self: center;
}
.btn-letter svg{
    color: #ffffff;
    fill: #ffffff;
    width: 14px;
    height: 14px;
    font-size: 14px;
}
.pagination{
    font-size: 14px;
    padding: 10px 0;
    text-align: center;
}
.button-container{
    display: flex;
    flex-direction: column;
    gap: 8px;
}
.select {
    width: 240px;
    padding:10px 36px 10px 12px;
    border:1px solid #ff79c6;
    border-radius:10px;
    font-size:14px; /* iOS 줌 방지 */
    background:#fff;
    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"><path d="M7 10l5 5 5-5" fill="none" stroke="%23888" stroke-width="2" stroke-linecap="round"/></svg>');
    background-repeat:no-repeat; background-position:right 10px center;
    appearance:none; -webkit-appearance:none; -moz-appearance:none;
    font-family: 'Galmuri9', sans-serif;
}
.letter-options{
    display: flex;
    flex-direction: column;
    gap: 8px;
}
.letter-options li{
    min-height: 38px;
    height: auto;
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-shrink: 1;
    gap: 8px;
}
.letter-options li > * {
    align-self: center;
}
.letter-options span.title{
    display: inline-flex;
    width: 100px;
    white-space: nowrap;
}
.size-container{
    display: flex;
    flex-direction: column;
    gap: 7px;
    align-items: flex-end;
    align-self: flex-start;
}
.size-container label{
    display: flex;
    flex-direction: row;
    flex-shrink: 1;
}
.size-container label span{
    white-space: nowrap;
}
.size-container input[type="range"] {
    width: 134px;
    margin: 0 8px;
}

@media (min-width: 768px) {
  .wrap{
      width: 64VW;
  }
    h1{
        transform: translatex(-18vw);
    }
}

@media (min-width: 1024px) {
    .wrap{
        width: 38VW;
    }
    h1{
        transform: translatex(-31vw);
    }
    .button-container{
        width: 300px;
        margin: auto;
    }
    .result-letter{
        width: 400px;
        height: 600px;
    }
}

